force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Physician_Signature__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Signature__c</fullName>
    <description>Was the physician&apos;s signature present on the enrollment form?</description>
    <label>Physician Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>