force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Physician_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Signature_Date__c</fullName>
    <description>Date physician signed prescription.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Signature Date</label>
    <type>Date</type>
</CustomField>