force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Primary__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary__c</fullName>
    <description>Formula checkbox to indicate whether or not a patient&apos;s prescription record matches the PJN_Primary_Prescription__c case field value. If so, value is set to TRUE which means the record is currently the primary prescription for a patient.</description>
    <formula>Id = PJN_Care_Plan__r.PJN_Primary_Prescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>