force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Product__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product which was prescribed.</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active product.</errorMessage>
        <filterItems>
            <field>CareProgramProduct.Status</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CareProgramProduct</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>