force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product_Name__c</fullName>
    <description>Formula to return the name of the product related to the prescription.</description>
    <formula>PJN_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>