force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Program_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_DeveloperName__c</fullName>
    <description>DeveloperName of the program to which this record&apos;s Care Plan relates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Program DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>