force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Set_as_Primary__c.field-meta.xml
<CustomField>
    <fullName>PJN_Set_as_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to indicate that a patient&apos;s prescription should be set to primary. Triggers the prescription to be stamped into the PJN_Primary_Prescription__c case field and sets the PJN_Primary__c checkbox on the prescription to TRUE.</description>
    <label>Set as Primary</label>
    <type>Checkbox</type>
</CustomField>