force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/recordTypes/MVN_Evkeeza.recordType-meta.xml
<RecordType>
    <fullName>MVN_Evkeeza</fullName>
    <active>true</active>
    <description>Prescription for Evkeeza (evinacumab-dgnb) injection.</description>
    <label>Evkeeza</label>
</RecordType>