force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/validationRules/PJN_Must_Be_Program_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Must_Be_Program_Product</fullName>
    <active>true</active>
    <description>Product selected for a prescription must belong to the program a patient is being enrolled for.</description>
    <errorConditionFormula>NOT(ISBLANK(  PJN_Product__c  ))

&amp;&amp;

(  PJN_Product__r.CareProgram.PJN_Program_DeveloperName__c   &lt;&gt;   PJN_Care_Plan__r.PJN_Program_DeveloperName__c  )</errorConditionFormula>
    <errorMessage>Product must belong to the program a patient is being enrolled for.</errorMessage>
</ValidationRule>